# finance-ia

./: .gitignore  .pre-commit-config.yaml  README.md  example_bank_statement.csv  main.py  pyproject.toml  quick_test.py  setup.ps1
app/: bank_integration.py  schemas.py
app/api/: __init__.py  endpoints.py  main.py
app/classifier/: model.py
app/db/: db.py
app/ocr/: image_reader.py  pdf_reader.py  reader.py
app/parser/: parser.py  parser_image.py  parser_pdf.py
app/utils/: preprocess_image.py  text.py
frontend/: app.js  index.html  style.css
scripts/: check_and_test.ps1  check_and_test.ps1:Zone.Identifier  check_and_test.ps1Zone.Identifier
tests/: conftest.py  end_to_end.py  parser.py  test_api.py  test_bank_integration.py  test_classifier.py  test_db.py  test_end_to_end.py  test_parser.py
