[project]
name = "finance-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
